Squash merge fix-diff into main

--- a/packages/blog-shared-components/src/lib.css
+++ b/packages/blog-shared-components/src/lib.css
@@ -1,1 +1,3 @@
 @import "tailwindcss";
+@source "./page/**/*.{js,ts,jsx,tsx}";
+@source "./components/*.{js,ts,jsx,tsx}";
